refactor: Introduce Spring-Java format and align this project with my other projects, automating the formatter away.
Signed-off-by: Michael Simons <michael@simons.ac>